# bord2

./: .gitignore  CMakeLists.txt  README.md
doc/: CMakeLists.txt  technical_material.tex
resources/: CMakeLists.txt  appicon32x32.xcf  appicon32x32.xpm  config.hpp.in
src/: AppData.hpp  BezierBox.hpp  BezierScheme.cpp  BezierScheme.hpp  BordPreviewDialog.cpp  BordPreviewDialog.hpp  CMakeLists.txt  ColdPtr.hpp  Figure3DView.cpp  Figure3DView.hpp  GenericGraph.hpp  Graph.hpp  MainDrawPane.cpp  MainDrawPane.hpp  MainFrame.cpp  MainFrame.hpp  MoveListModel.hpp  OrthoSpatialScheme.hpp  PathFigure.hpp  PathScheme.hpp  PlTang.hpp  PlTangEntryDialog.cpp  PlTangEntryDialog.hpp  PlTangMove.hpp  PlTangView.cpp  PlTangView.hpp  ProjBezierScheme.hpp  ProjSpatialScheme.hpp  ROEntryDialog.cpp  ROEntryDialog.hpp  TikzScheme.cpp  TikzScheme.hpp  WiredTable.hpp  WxGSScheme.cpp  WxGSScheme.hpp  main.cpp  utils.hpp
src/figures/: PathFigure3D.hpp  PlTangFigure.hpp  QBezierLine3D.cpp  QBezierLine3D.hpp  QBezierTriangle.cpp  QBezierTriangle.hpp  TangleMoveFigure.hpp  figures.hpp
src/math/: AffHypPlane.cpp  AffHypPlane.hpp  Bezier.hpp  Bezier2D.hpp  PlaneGeometry.cpp  PlaneGeometry.hpp  QuadraticCurve.cpp  QuadraticCurve.hpp  funcs.cpp  funcs.hpp  misc.hpp  solvers.hpp
src/utils/: BitArray.hpp  StrLnView.hpp  VarUnion.hpp
test/: CMakeLists.txt  test_affhyp.cpp  test_bezier.cpp  test_bezierscheme.cpp  test_bitarray.cpp  test_coldptr.cpp  test_genericgraph.cpp  test_graph.cpp  test_math.cpp  test_planegeom.cpp  test_pltang.cpp  test_quadcurve.cpp  test_solvers.cpp  test_utils.cpp  test_wiredtable.cpp
